--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .input {
+    @apply border border-gray-800 px-5 py-1 w-[220px] sm:w-[501px] h-[46px] sm:h-[56px] rounded-lg focus:outline-primary-400 placeholder:text-xs sm:placeholder:text-base;
+  }
+  .submit-btn,
+  .continue-btn {
+    @apply bg-primary-500 font-medium text-white rounded-lg mb-3;
+  }
+  .submit-btn {
+    @apply w-[220px] sm:w-[501px] h-[46px] sm:h-[56px];
+  }
+  .continue-btn {
+    @apply w-[417px] h-[56px];
+  }
+  .active-nav-link {
+    color: #871e35;
+  }
+  .country-option {
+    @apply flex items-center gap-2 cursor-pointer hover:bg-gray-400 px-5 py-2;
+  }
+}
