--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,1 +1,291 @@
-<p>register works!</p>
+<div class="flex items-center justify-between w-full pr-4 pt-6 px-5">
+  <h1 class="text-2xl font-bold text-gray-1800 ml-8">Speedo Transfer</h1>
+  <a class="flex items-center" routerLink="/">
+    <svg
+      width="32"
+      height="32"
+      viewBox="0 0 32 32"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M9.01 22.99L16.001 16L22.99 22.99M22.99 9.00902L16 16L9.01 9.00902"
+        stroke="#24221E"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
+    </svg>
+  </a>
+</div>
+
+<div class="max-w-lg mx-auto bg-white p-8 shadow-xl rounded-lg mt-20 mb-20">
+  <h1 class="text-2xl font-bold mb-4 text-gray-1800">Create Your Account</h1>
+  <p class="text-gray-1400 mb-4">
+    Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
+    incididunt ut labore.
+  </p>
+  <div class="max-w-lg mx-auto bg-white p-8 shadow-md rounded-lg">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="space-y-4">
+      <!-- Name -->
+      <div class="mb-4">
+        <label for="name" class="block text-gray-1600 font-bold mb-2"
+          >User name</label
+        >
+        <input
+          type="text"
+          id="name"
+          formControlName="name"
+          class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+          placeholder="User name"
+        />
+        <div
+          *ngIf="
+            registerForm.get('name')?.invalid &&
+            (registerForm.get('name')?.touched || registerForm.dirty)
+          "
+        >
+          <p class="text-red-500 text-sm">User name is required</p>
+        </div>
+      </div>
+
+      <!-- Email -->
+      <div class="mb-4">
+        <label for="email" class="block text-gray-1600 font-bold mb-2"
+          >Email address</label
+        >
+        <input
+          type="email"
+          id="email"
+          formControlName="email"
+          class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+          placeholder="Email address"
+        />
+        <div
+          *ngIf="
+            registerForm.get('email')?.invalid &&
+            (registerForm.get('email')?.touched || registerForm.dirty)
+          "
+        >
+          <p class="text-red-500 text-sm">Email is required</p>
+        </div>
+      </div>
+
+      <!-- Country -->
+      <div class="mb-4">
+        <label for="country" class="block text-gray-1600 font-bold mb-2"
+          >Country</label
+        >
+        <select
+          id="country"
+          formControlName="country"
+          class="text-gray-1100 w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+        >
+          <option value="">Select your country</option>
+          <option value="USA">USA</option>
+          <option value="Canada">Canada</option>
+          <option value="UK">UK</option>
+          <option value="Australia">Australia</option>
+        </select>
+        <div
+          *ngIf="
+            registerForm.get('country')?.invalid &&
+            (registerForm.get('country')?.touched || registerForm.dirty)
+          "
+        >
+          <p class="text-red-500 text-sm">Country is required</p>
+        </div>
+      </div>
+
+      <!-- Date of Birth Fields -->
+      <div class="mb-4">
+        <label class="block text-gray-1700 text-sm font-bold mb-2" for="dob"
+          >Date of Birth</label
+        >
+        <div class="flex space-x-2">
+          <div class="relative w-1/3">
+            <label
+              class="block mb-1 text-gray-1600 text-sm font-bold"
+              for="dob-day"
+              >Day</label
+            >
+            <input
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="dob-day"
+              formControlName="dobDay"
+              type="number"
+              placeholder="DD"
+              min="1"
+              max="31"
+            />
+            <div
+              *ngIf="
+                registerForm.get('dobDay')?.invalid &&
+                (registerForm.get('dobDay')?.touched || registerForm.dirty)
+              "
+            >
+              <p class="text-red-500 text-sm">Day is required</p>
+            </div>
+          </div>
+          <div class="relative w-1/3">
+            <label
+              class="block mb-1 text-gray-1600 text-sm font-bold"
+              for="dob-month"
+              >Month</label
+            >
+            <select
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="dob-month"
+              formControlName="dobMonth"
+            >
+              <option value="">Month</option>
+              <option value="1">January</option>
+              <option value="2">February</option>
+              <option value="3">March</option>
+              <option value="4">April</option>
+              <option value="5">May</option>
+              <option value="6">June</option>
+              <option value="7">July</option>
+              <option value="8">August</option>
+              <option value="9">September</option>
+              <option value="10">October</option>
+              <option value="11">November</option>
+              <option value="12">December</option>
+            </select>
+            <div
+              *ngIf="
+                registerForm.get('dobMonth')?.invalid &&
+                (registerForm.get('dobMonth')?.touched || registerForm.dirty)
+              "
+            >
+              <p class="text-red-500 text-sm">Month is required</p>
+            </div>
+          </div>
+          <div class="relative w-1/3">
+            <label
+              class="block mb-1 text-gray-1600 text-sm font-bold"
+              for="dob-year"
+              >Year</label
+            >
+            <input
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="dob-year"
+              formControlName="dobYear"
+              type="number"
+              placeholder="YYYY"
+              min="1900"
+              max="2005"
+            />
+            <div
+              *ngIf="
+                registerForm.get('dobYear')?.invalid &&
+                (registerForm.get('dobYear')?.touched || registerForm.dirty)
+              "
+            >
+              <p class="text-red-500 text-sm">Year is required</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Password Field -->
+      <div class="relative mb-4">
+        <label for="password" class="block text-gray-1600 font-bold mb-2"
+          >Password</label
+        >
+        <input
+          [type]="isPasswordVisible ? 'password' : 'text'"
+          id="password"
+          formControlName="password"
+          class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+          placeholder="Enter your password"
+        />
+        <div
+          *ngIf="
+            registerForm.get('password')?.invalid &&
+            (registerForm.get('password')?.touched || registerForm.dirty)
+          "
+        >
+          <p class="text-red-500 text-sm">Password is required</p>
+        </div>
+        <button
+          type="button"
+          (click)="togglePasswordVisibility('password')"
+          class="absolute inset-y-0 right-0 flex items-center px-3 text-gray-700"
+        >
+          <i
+            [class]="isPasswordVisible ? 'fas fa-eye-slash' : 'fas fa-eye'"
+            class="mt-7"
+          ></i>
+        </button>
+      </div>
+
+      <!-- Confirm Password Field -->
+      <div class="relative mb-6">
+        <label
+          for="confirm-password"
+          class="block text-gray-1600 font-bold mb-2"
+          >Confirm Password</label
+        >
+        <input
+          [type]="isConfirmPasswordVisible ? 'password' : 'text'"
+          id="confirm-password"
+          formControlName="confirmPassword"
+          class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+          placeholder="Confirm your password"
+        />
+        <div
+          *ngIf="
+            registerForm.get('confirmPassword')?.invalid &&
+            (registerForm.get('confirmPassword')?.touched || registerForm.dirty)
+          "
+        >
+          <p class="text-red-500 text-sm">Confirm Password is required</p>
+        </div>
+        <button
+          type="button"
+          (click)="togglePasswordVisibility('confirm-password')"
+          class="absolute inset-y-0 right-0 flex items-center px-3 text-gray-700"
+        >
+          <i
+            [class]="
+              isConfirmPasswordVisible ? 'fas fa-eye-slash' : 'fas fa-eye'
+            "
+            class="mt-7"
+          ></i>
+        </button>
+      </div>
+
+      <p class="text-sm text-gray-1400">
+        The password should be at least eight characters long. To make it
+        stronger, use upper and lower case letters, numbers, and symbols like !
+        " ? $ % ^ & )
+      </p>
+
+      <!-- Submit Button -->
+      <div class="flex justify-center mt-6 mb-4">
+        <button
+          type="submit"
+          class="bg-primary-500 text-white px-6 py-3 rounded-lg shadow-md hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-100 w-full"
+        >
+          Create Account
+        </button>
+      </div>
+
+      <p class="text-gray-1400">
+        Already have an account?
+        <a
+          routerLink="/login"
+          class="text-primary-500 hover:text-primary-700 underline"
+          >Login</a
+        >
+      </p>
+    </form>
+  </div>
+</div>
+
+<div class="footer mt-20">
+  <p class="text-gray-140 text-center py-3 bg-pink-50">
+    &copy; Speedo Transfer Payments Limited 2024
+  </p>
+</div>
