--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -20,8 +20,8 @@
 </div>
 
 <div class="max-w-lg mx-auto bg-white p-8 shadow-xl rounded-lg mt-20 mb-20">
-  <h1 class="text-2xl font-bold mb-4 text-gray-1800">Create Your Account</h1>
-  <p class="text-gray-1400 mb-4">
+  <h1 class="text-fs-md-title font-semibold mb-2 text-gray-1800">Create Your Account</h1>
+  <p class="text-gray-1400 mb-4 fs-body">
     Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
     incididunt ut labore.
   </p>
@@ -29,12 +29,13 @@
     <form  (ngSubmit)="onSubmit()" class="space-y-4">
       <!-- Name -->
       <div class="mb-4">
-        <label for="name" class="block text-gray-1600 font-bold mb-2"
+        <label for="name" class="block text-gray-1600  mb-2 fs-body"
           >User name</label
         >
         <input
           type="text"
           id="name"
+          width="501px"
           formControlName="name"
           class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
           placeholder="User name"
@@ -51,7 +52,7 @@
 
       <!-- Email -->
       <div class="mb-4">
-        <label for="email" class="block text-gray-1600 font-bold mb-2"
+        <label for="email" class="block text-gray-1600 fs-body mb-2"
           >Email address</label
         >
         <input
@@ -73,7 +74,7 @@
 
       <!-- Country -->
       <div class="mb-4">
-        <label for="country" class="block text-gray-1600 font-bold mb-2"
+        <label for="country" class="block text-gray-1600 fs-body mb-2"
           >Country</label
         >
         <select
@@ -99,13 +100,13 @@
 
       <!-- Date of Birth Fields -->
       <div class="mb-4">
-        <label class="block text-gray-1700 text-sm font-bold mb-2" for="dob"
+        <label class="block text-gray-1700 text-sm fs-body mb-2" for="dob"
           >Date of Birth</label
         >
         <div class="flex space-x-2">
           <div class="relative w-1/3">
             <label
-              class="block mb-1 text-gray-1600 text-sm font-bold"
+              class="block mb-1 text-gray-1600 text-sm fs-body"
               for="dob-day"
               >Day</label
             >
@@ -129,7 +130,7 @@
           </div>
           <div class="relative w-1/3">
             <label
-              class="block mb-1 text-gray-1600 text-sm font-bold"
+              class="block mb-1 text-gray-1600 text-sm fs-body"
               for="dob-month"
               >Month</label
             >
@@ -163,7 +164,7 @@
           </div>
           <div class="relative w-1/3">
             <label
-              class="block mb-1 text-gray-1600 text-sm font-bold"
+              class="block mb-1 text-gray-1600 text-sm fs-body"
               for="dob-year"
               >Year</label
             >
@@ -190,7 +191,7 @@
 
       <!-- Password Field -->
       <div class="relative mb-4">
-        <label for="password" class="block text-gray-1600 font-bold mb-2"
+        <label for="password" class="block text-gray-1600 fs-body mb-2"
           >Password</label
         >
         <input
@@ -224,7 +225,7 @@
       <div class="relative mb-6">
         <label
           for="confirm-password"
-          class="block text-gray-1600 font-bold mb-2"
+          class="block text-gray-1600 fs-body mb-2"
           >Confirm Password</label
         >
         <input
@@ -256,7 +257,7 @@
         </button>
       </div>
 
-      <p class="text-sm text-gray-1400">
+      <p class="fs-small text-gray-1400">
         The password should be at least eight characters long. To make it
         stronger, use upper and lower case letters, numbers, and symbols like !
         " ? $ % ^ & )
@@ -272,7 +273,7 @@
         </button>
       </div>
 
-      <p class="text-gray-1400">
+      <p class="text-gray-1400 fs-body">
         Already have an account?
         <a
           routerLink="/login"
