--- a/src/app/shared/components/hero-section/hero-section.component.html
+++ b/src/app/shared/components/hero-section/hero-section.component.html
@@ -1,18 +1,20 @@
 <section
-  class="hero w-full h-[800px] bg-cover bg-blend-darken flex justify-center items-center gap-16"
+  class="hero w-full h-[1200px] sm:h-[800px] bg-cover bg-blend-darken flex flex-col sm:flex-row justify-center items-center gap-16"
 >
-  <div class="text-white font-semibold flex flex-col gap-5">
+  <div
+    class="text-white font-semibold flex flex-col gap-5 text-center sm:text-left sm:gap-5 sm:max-w-md mt-48 sm:mt-0"
+  >
     <p class="text-fs-p">Simple. Quick. Secure.</p>
-    <h1 class="text-fs-h1 leading-[1.2]">
+    <h1 class="text-fs-h3 sm:text-fs-h1 leading-[1.2]">
       Send Money <br />Anywhere, Instantly
     </h1>
-    <p class="font-medium">
+    <p class="font-medium text-xs p-2 sm:p-0 sm:text-base">
       Fast, secure, and affordable international money transfers. Get started in
       minutes
     </p>
     <a
       routerLink="/register"
-      class="mt-12 h-[56px] w-[192px] bg-primary-500 flex justify-center items-center"
+      class="mt-12 h-[56px] w-[192px] bg-primary-500 flex justify-center items-center mx-auto sm:mx-0"
       >Create An Account</a
     >
   </div>
