--- a/src/app/shared/components/hero-section/hero-section.component.scss
+++ b/src/app/shared/components/hero-section/hero-section.component.scss
@@ -1,4 +1,4 @@
 .hero {
-  background-image: url("../../../assets/img/Img_header.jpg");
+  background-image: url("../../../../assets/img/Img_header.jpg");
   background-color: #00000096;
 }
