--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
     @apply w-[220px] sm:w-[501px] h-[46px] sm:h-[56px];
   }
   .continue-btn {
-    @apply w-[417px] h-[56px];
+    @apply w-[230px] sm:w-[417px] h-[56px];
   }
   .active-nav-link {
     color: #871e35;
