--- a/src/app/account/logout/logout.component.html
+++ b/src/app/account/logout/logout.component.html
@@ -1,3 +1,24 @@
+<div class="flex items-center justify-between w-full pr-4 pt-6 px-5">
+  <h1 class="text-2xl font-bold text-gray-1800 ml-8">Speedo Transfer</h1>
+  <a class="flex items-center" routerLink="/">
+    <svg
+      width="32"
+      height="32"
+      viewBox="0 0 32 32"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M9.01 22.99L16.001 16L22.99 22.99M22.99 9.00902L16 16L9.01 9.00902"
+        stroke="#24221E"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
+    </svg>
+  </a>
+</div>
+
 <div class="flex flex-col mb-10 justify-center items-center">
   <div
     class="flex bg-gray-500 w-[16rem] sm:w-[36rem] p-5 mt-20 mb-8 gap-3"
@@ -47,28 +68,77 @@
       Login to your account
     </p>
 
-    <form action="">
+    <form [formGroup]="logoutForm" (ngSubmit)="onSubmit()">
       <div class="flex flex-col gap-2 mb-5">
         <label class="text-gray-1600 text-fs-small sm:text-base" for="email"
           >Your Email Address</label
         >
         <input
+          formControlName="email"
           id="email"
           type="email"
           placeholder="Email@gmail.com"
           class="input"
         />
+        <div
+          *ngIf="
+            logoutForm.get('email')?.invalid &&
+            !logoutForm.get('email')?.value &&
+            (logoutForm.get('email')?.touched || logoutForm.dirty)
+          "
+        >
+          <p class="text-red-500 text-sm">Email is required</p>
+        </div>
+        <div
+          *ngIf="
+        logoutForm.get('email')?.invalid &&
+        logoutForm.get('email')?.errors?.['email'] &&
+          (logoutForm.get('email')?.touched || logoutForm.dirty)
+        "
+        >
+          <p class="text-red-500 text-sm">
+            Please Enter an Email With &commat;
+          </p>
+        </div>
       </div>
       <div class="flex flex-col relative gap-2">
         <label class="text-gray-1600 text-fs-small sm:text-base" for="password"
           >Password</label
         >
         <input
+          formControlName="password"
           id="password"
           [type]="showPassword ? 'text' : 'password'"
           placeholder="************"
           class="mb-5 input"
         />
+        <div
+          *ngIf="
+            logoutForm.get('password')?.invalid &&
+            !logoutForm.get('password')?.value &&
+            (logoutForm.get('password')?.touched || logoutForm.dirty)
+          "
+        >
+          <p class="text-red-500 text-sm">Password is required</p>
+        </div>
+        <div
+          *ngIf="
+        logoutForm.get('password')?.invalid &&
+        logoutForm.get('password')?.errors?.['minlength'] &&
+          (logoutForm.get('password')?.touched || logoutForm.dirty)
+        "
+        >
+          <p class="text-red-500 text-sm">Minimum Length 3 Characters</p>
+        </div>
+        <div
+          *ngIf="
+        logoutForm.get('password')?.invalid &&
+        logoutForm.get('password')?.errors?.['maxlength'] &&
+          (logoutForm.get('password')?.touched || logoutForm.dirty)
+        "
+        >
+          <p class="text-red-500 text-sm">Maxmimum Length 16 Characters</p>
+        </div>
         <svg
           *ngIf="showPassword"
           (click)="toggleShowPassword()"
@@ -162,8 +232,8 @@
   </div>
 </div>
 
-<div
-  class="absolute bottom-[-20rem] w-full h-[56px] flex justify-center items-center bg-primary-100"
->
-  <p>©Speedo Transfer Payments Limited 2024</p>
+<div class="footer mt-20">
+  <p class="text-gray-140 text-center py-3 bg-pink-50">
+    &copy; Speedo Transfer Payments Limited 2024
+  </p>
 </div>
