--- a/src/app/shared/components/currency-dropdown/currency-dropdown.component.html
+++ b/src/app/shared/components/currency-dropdown/currency-dropdown.component.html
@@ -1,10 +1,10 @@
-<div class="w-[481px] h-[416px] bg-white rounded-md p-10">
+<div class="w-[300px] sm:w-[481px] sm:h-[416px] bg-white rounded-md p-10">
   <div class="flex flex-col gap-2 relative">
     <label for="">You Send</label>
     <input
       type="text"
       placeholder="1000"
-      class="border border-gray-500 rounded-md h-[55px] w-[417px] px-5 focus:outline-primary-500"
+      class="border border-gray-500 rounded-md h-[55px] w-[200px] sm:w-[417px] px-5 focus:outline-primary-500"
     />
 
     <div
@@ -245,7 +245,7 @@
     <input
       type="text"
       placeholder="47,488.42"
-      class="border border-gray-500 rounded-md h-[55px] w-[417px] px-5 focus:outline-primary-500"
+      class="border border-gray-500 rounded-md h-[55px] w-[200px] sm:w-[417px] px-5 focus:outline-primary-500"
     />
 
     <div
