--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,19 +1,113 @@
-<nav class="h-[91px] w-full flex justify-around items-center">
-  <h1 class="text-fs-sm-title font-semibold">Speedo Transfer</h1>
-  <div class="flex gap-4">
-    <a routerLink="" class="font-medium">Home</a>
-    <a routerLink="/transfer-money" class="font-medium">Money Transfer</a>
-    <a routerLink="" class="font-medium">My Account</a>
+<nav
+  class="sm:h-[91px] w-full flex flex-col sm:flex-row sm:justify-around sm:items-center"
+>
+  <div class="flex items-center justify-around">
+    <h1 class="text-fs-p sm:text-fs-sm-title font-semibold">Speedo Transfer</h1>
+    <svg
+      class="block sm:hidden"
+      (click)="toggleNavbar()"
+      width="30px"
+      height="30px"
+      viewBox="0 0 24 24"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M4 18L20 18"
+        stroke="#000000"
+        stroke-width="2"
+        stroke-linecap="round"
+      />
+      <path
+        d="M4 12L20 12"
+        stroke="#000000"
+        stroke-width="2"
+        stroke-linecap="round"
+      />
+      <path
+        d="M4 6L20 6"
+        stroke="#000000"
+        stroke-width="2"
+        stroke-linecap="round"
+      />
+    </svg>
   </div>
-  <div class="flex gap-3">
+  <div class="hidden sm:flex flex-col sm:flex-row gap-2 sm:gap-4 font-medium">
+    <a
+      routerLink=""
+      routerLinkActive="active-nav-link"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="text-center sm:text-left"
+      >Home</a
+    >
+    <a
+      routerLink="/transfer-money"
+      routerLinkActive="active-nav-link"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="text-center sm:text-left"
+      >Money Transfer</a
+    >
+    <a
+      routerLink="/my-account"
+      routerLinkActive="active-nav-link"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="text-center sm:text-left"
+      >My Account</a
+    >
+  </div>
+  <div
+    class="hidden sm:flex flex-col items-center sm:flex-row gap-2 sm:gap-3 mt-2 sm:mt-0"
+  >
     <a
       routerLink="/login"
-      class="border border-gray-1400 px-5 py-2 rounded-md font-medium hover:bg-primary-500 hover:text-white transition-colors delay-150"
+      class="border border-gray-1400 px-5 py-2 rounded-md font-medium hover:bg-primary-500 hover:text-white transition-colors delay-150 text-center sm:text-left"
       >Login</a
     >
     <a
       routerLink="/register"
-      class="bg-primary-500 px-5 py-2 text-white rounded-md font-medium hover:bg-primary-600 transition-colors delay-150"
+      class="bg-primary-500 px-5 py-2 text-white rounded-md font-medium hover:bg-primary-600 transition-colors delay-150 text-center sm:text-left"
+      >Register Now</a
+    >
+  </div>
+  <!-- Navbar For Small Devices -->
+  <div
+    *ngIf="showNavbar"
+    class="flex sm:hidden flex-col sm:flex-row gap-2 sm:gap-4 font-medium"
+  >
+    <a
+      routerLink=""
+      routerLinkActive="active-nav-link"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="text-center sm:text-left"
+      >Home</a
+    >
+    <a
+      routerLink="/transfer-money"
+      routerLinkActive="active-nav-link"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="text-center sm:text-left"
+      >Money Transfer</a
+    >
+    <a
+      routerLink="/my-account"
+      routerLinkActive="active-nav-link"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="text-center sm:text-left"
+      >My Account</a
+    >
+  </div>
+  <div
+    *ngIf="showNavbar"
+    class="flex sm:hidden flex-col items-center sm:flex-row gap-2 sm:gap-3 mt-2 sm:mt-0"
+  >
+    <a
+      routerLink="/login"
+      class="border border-gray-1400 px-5 py-2 rounded-md font-medium hover:bg-primary-500 hover:text-white transition-colors delay-150 text-center sm:text-left"
+      >Login</a
+    >
+    <a
+      routerLink="/register"
+      class="bg-primary-500 px-5 py-2 text-white rounded-md font-medium hover:bg-primary-600 transition-colors delay-150 text-center sm:text-left mb-5 sm:mb-0"
       >Register Now</a
     >
   </div>
