--- a/src/app/account/transfer-money/transfer-money.component.scss
+++ b/src/app/account/transfer-money/transfer-money.component.scss
@@ -11,7 +11,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("../../assets/img/Breadcrumb img.png");
+  background-image: url("/assets/img/Breadcrumb img.png");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 5%;
