Transfer page Updates

--- a/src/app/account/transfer-money/transfer-money.component.scss
+++ b/src/app/account/transfer-money/transfer-money.component.scss
@@ -23,6 +23,7 @@
   color: black;
   margin-right: 0.5rem;
 }
+
 //
 .text-left {
   text-align: left;
@@ -44,4 +45,11 @@ input {
   height: 50px;
   background-color: #e3e2e2;
   border-radius: 50%;
+}
+
+.feesPrice {
+  background-color: #e3e2e2;
+  padding: 4px 20px;
+  margin-left: 18rem;
+  border-radius: 20px;
 }
