Add My Account Page

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -84,7 +84,7 @@
           *ngIf="
             loginForm.get('password')?.invalid &&
             !loginForm.get('password')?.value &&
-            (loginForm.get('password')?.touched || loginForm.dirty)
+            loginForm.get('password')?.touched
           "
         >
           <p class="text-red-500 text-sm">Password is required</p>
