--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -44,10 +44,10 @@
         <div
           *ngIf="
             registerForm.get('name')?.invalid &&
-            (registerForm.get('name')?.touched || registerForm.dirty)
+            registerForm.get('name')?.touched
           "
         >
-          <p class="text-red-500 text-sm">User name is required</p>
+          <p class="text-red-500 text-sm mt-3">User name is required</p>
         </div>
       </div>
 
@@ -66,10 +66,22 @@
         <div
           *ngIf="
             registerForm.get('email')?.invalid &&
-            (registerForm.get('email')?.touched || registerForm.dirty)
+            !registerForm.get('email')?.value &&
+            registerForm.get('email')?.touched
           "
         >
-          <p class="text-red-500 text-sm">Email is required</p>
+          <p class="text-red-500 text-sm mt-3">Email is required</p>
+        </div>
+        <div
+          *ngIf="
+        registerForm.get('email')?.invalid &&
+        registerForm.get('email')?.errors?.['email'] &&
+          (registerForm.get('email')?.touched )
+        "
+        >
+          <p class="text-red-500 text-sm mt-3">
+            Please Enter an Email With &commat;
+          </p>
         </div>
       </div>
 
@@ -92,10 +104,10 @@
         <div
           *ngIf="
             registerForm.get('country')?.invalid &&
-            (registerForm.get('country')?.touched || registerForm.dirty)
+            registerForm.get('country')?.touched
           "
         >
-          <p class="text-red-500 text-sm">Country is required</p>
+          <p class="text-red-500 text-sm mt-3">Country is required</p>
         </div>
       </div>
 
@@ -123,10 +135,10 @@
             <div
               *ngIf="
                 registerForm.get('dobDay')?.invalid &&
-                (registerForm.get('dobDay')?.touched || registerForm.dirty)
+                registerForm.get('dobDay')?.touched
               "
             >
-              <p class="text-red-500 text-sm">Day is required</p>
+              <p class="text-red-500 text-sm mt-3">Day is required</p>
             </div>
           </div>
           <div class="relative w-1/3">
@@ -157,10 +169,10 @@
             <div
               *ngIf="
                 registerForm.get('dobMonth')?.invalid &&
-                (registerForm.get('dobMonth')?.touched || registerForm.dirty)
+                registerForm.get('dobMonth')?.touched
               "
             >
-              <p class="text-red-500 text-sm">Month is required</p>
+              <p class="text-red-500 text-sm mt-3">Month is required</p>
             </div>
           </div>
           <div class="relative w-1/3">
@@ -181,10 +193,10 @@
             <div
               *ngIf="
                 registerForm.get('dobYear')?.invalid &&
-                (registerForm.get('dobYear')?.touched || registerForm.dirty)
+                registerForm.get('dobYear')?.touched
               "
             >
-              <p class="text-red-500 text-sm">Year is required</p>
+              <p class="text-red-500 text-sm mt-3">Year is required</p>
             </div>
           </div>
         </div>
@@ -196,7 +208,7 @@
           >Password</label
         >
         <input
-          [type]="showPassword ? 'password' : 'text'"
+          [type]="!showPassword ? 'password' : 'text'"
           id="password"
           formControlName="password"
           class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -284,10 +296,10 @@
         <div
           *ngIf="
             registerForm.get('password')?.invalid &&
-            (registerForm.get('password')?.touched || registerForm.dirty)
+            registerForm.get('password')?.touched
           "
         >
-          <p class="text-red-500 text-sm">
+          <p class="text-red-500 text-sm mt-3">
             Password should be at least 8 characters
           </p>
         </div>
@@ -299,7 +311,7 @@
           >Confirm Password</label
         >
         <input
-          [type]="showPassword ? 'password' : 'text'"
+          [type]="!showPassword ? 'password' : 'text'"
           id="confirm-password"
           formControlName="confirmPassword"
           class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -308,10 +320,10 @@
         <div
           *ngIf="
             registerForm.get('confirmPassword')?.invalid &&
-            (registerForm.get('confirmPassword')?.touched || registerForm.dirty)
+            registerForm.get('confirmPassword')?.touched
           "
         >
-          <p class="text-red-500 text-sm">Confirm Password is required</p>
+          <p class="text-red-500 text-sm mt-3">Confirm Password is required</p>
         </div>
         <svg
           *ngIf="showConfirmPassword"
