--- a/src/app/shared/components/currency-dropdown/currency-dropdown.component.html
+++ b/src/app/shared/components/currency-dropdown/currency-dropdown.component.html
@@ -51,7 +51,7 @@
             </clipPath>
           </defs>
         </svg>
-        <p class="font-medium">USD</p>
+        <p class="font-medium">{{ countryOptionOne }}</p>
       </div>
 
       <svg
@@ -72,7 +72,7 @@
       *ngIf="showOptionOne"
       class="absolute right-[-1rem] top-[4.8rem] w-[112px] h-[192px] shadow-md flex flex-col justify-around items-center bg-white rounded-md z-10"
     >
-      <div class="country-option">
+      <div (click)="onClickOptionOne('USD')" class="country-option">
         <svg
           width="16"
           height="16"
@@ -115,7 +115,7 @@
         <p class="font-medium text-gray-1100">USD</p>
       </div>
 
-      <div class="country-option">
+      <div (click)="onClickOptionOne('EUR')" class="country-option">
         <svg
           width="16"
           height="16"
@@ -158,7 +158,7 @@
         <p class="font-medium text-gray-1100">EUR</p>
       </div>
 
-      <div class="country-option">
+      <div (click)="onClickOptionOne('KSR')" class="country-option">
         <svg
           width="16"
           height="16"
@@ -201,7 +201,7 @@
         <p class="font-medium text-gray-1100">KSR</p>
       </div>
 
-      <div class="country-option">
+      <div (click)="onClickOptionOne('EGP')" class="country-option">
         <svg
           width="16"
           height="16"
@@ -292,7 +292,7 @@
             </clipPath>
           </defs>
         </svg>
-        <p class="font-medium">USD</p>
+        <p class="font-medium">{{ countryOptionTwo }}</p>
       </div>
 
       <svg
@@ -313,7 +313,7 @@
       *ngIf="showOptionTwo"
       class="absolute right-[-1rem] top-[4.8rem] w-[112px] h-[192px] shadow-md flex flex-col justify-around items-center bg-white rounded-md z-10"
     >
-      <div class="country-option">
+      <div (click)="onClickOptionTwo('USD')" class="country-option">
         <svg
           width="16"
           height="16"
@@ -356,7 +356,7 @@
         <p class="font-medium text-gray-1100">USD</p>
       </div>
 
-      <div class="country-option">
+      <div (click)="onClickOptionTwo('EUR')" class="country-option">
         <svg
           width="16"
           height="16"
@@ -399,7 +399,7 @@
         <p class="font-medium text-gray-1100">EUR</p>
       </div>
 
-      <div class="country-option">
+      <div (click)="onClickOptionTwo('KSR')" class="country-option">
         <svg
           width="16"
           height="16"
@@ -442,7 +442,7 @@
         <p class="font-medium text-gray-1100">KSR</p>
       </div>
 
-      <div class="country-option">
+      <div (click)="onClickOptionTwo('EGP')" class="country-option">
         <svg
           width="16"
           height="16"
