--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,4 +23,10 @@
   .country-option {
     @apply flex items-center gap-2 cursor-pointer hover:bg-gray-400 px-5 py-2;
   }
+  .my-account-btn {
+    @apply h-[56px] text-left text-fs-small sm:text-fs-body sm:w-full border border-gray-500 cursor-pointer px-5 text-gray-1500 hover:bg-primary-500 hover:text-white transition-colors duration-150;
+  }
+  .setting-input {
+    @apply w-[320px] sm:w-[368px] h-[56px] border-2 border-primary-500 rounded-lg focus:outline-0 p-3;
+  }
 }
