--- a/src/app/account/my-account/my-account.component.html
+++ b/src/app/account/my-account/my-account.component.html
@@ -388,366 +388,37 @@
   <div
     class="flex flex-row sm:flex-col w-[100px] sm:w-[293px] sm:h-[718px] sm:border sm:border-[#DEE0E3] bg-gray-200 font-medium"
   >
-    <button
-      class="my-account-btn"
-      [ngClass]="acitveDiv === 'my-profile' ? 'active-btn' : ''"
-      (click)="onClickBtn('my-profile')"
+    <a
+      routerLink="/my-account"
+      routerLinkActive="active-btn"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="my-account-link"
+      >My Profile</a
     >
-      My Profile
-    </button>
-    <button
-      class="my-account-btn"
-      [ngClass]="acitveDiv === 'payment-history' ? 'active-btn' : ''"
-      (click)="onClickBtn('payment-history')"
+    <a
+      routerLink="/my-account/payments-history"
+      routerLinkActive="active-btn"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="my-account-link"
+      >Payments History</a
     >
-      Payments History
-    </button>
-    <button
-      class="my-account-btn"
-      [ngClass]="acitveDiv === 'settings' ? 'active-btn' : ''"
-      (click)="onClickBtn('settings')"
+    <a
+      routerLink="/my-account/settings"
+      routerLinkActive="active-btn"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="my-account-link"
+      >Settings</a
     >
-      Settings
-    </button>
-    <button
-      class="my-account-btn"
-      [ngClass]="acitveDiv === 'change-password' ? 'active-btn' : ''"
-      (click)="onClickBtn('change-password')"
+    <a
+      routerLink="/my-account/change-password"
+      routerLinkActive="active-btn"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="my-account-link"
+      >Change Password</a
     >
-      Change Password
-    </button>
   </div>
 
-  <div>
-    <!--  My Profile -->
-    <div *ngIf="acitveDiv === 'my-profile'">
-      <div class="font-semibold mb-10">
-        <p class="text-fs-xs-title mb-8">My Profile</p>
-        <p class="text-fs-h1">
-          10000$ <span class="text-primary-600 text-fs-sm-title">Balance</span>
-        </p>
-      </div>
-
-      <div class="flex gap-8">
-        <div class="font-medium flex flex-col gap-8">
-          <p>First Name :</p>
-          <p>Email :</p>
-          <p>Phone :</p>
-          <p>Gender :</p>
-        </div>
-        <div class="text-gray-1200 flex flex-col gap-8">
-          <p>Jonathon Smith</p>
-          <p>jhonathonsmith&commat;gmail.com</p>
-          <p>+880125412624</p>
-          <p>Male</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Payments History -->
-    <div *ngIf="acitveDiv === 'payment-history'">
-      <p class="font-semibold text-fs-xs-title mb-8">Payment History</p>
-      <div>
-        <div
-          class="w-[340px] sm:w-[711px] h-[56px] bg-primary-100 p-5 flex justify-between items-center"
-        >
-          <p>Account Number: 6785 4987 6543</p>
-          <svg
-            (click)="copyToCliboard('Text Copied')"
-            width="26px"
-            height="26px"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            class="cursor-pointer"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M19.5 16.5L19.5 4.5L18.75 3.75H9L8.25 4.5L8.25 7.5L5.25 7.5L4.5 8.25V20.25L5.25 21H15L15.75 20.25V17.25H18.75L19.5 16.5ZM15.75 15.75L15.75 8.25L15 7.5L9.75 7.5V5.25L18 5.25V15.75H15.75ZM6 9L14.25 9L14.25 19.5L6 19.5L6 9Z"
-              fill="#969593"
-            />
-          </svg>
-        </div>
-        <div class="flex justify-between p-5">
-          <div class="flex flex-col gap-3">
-            <p class="font-medium">Account Details</p>
-            <p class="text-gray-1500">Recipient Name</p>
-          </div>
-          <div class="flex flex-col gap-3">
-            <p class="font-medium">Total Price : 1000USD</p>
-            <p class="text-gray-1500">Jonathon Smith</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Settings -->
-    <div *ngIf="acitveDiv === 'settings'">
-      <p class="font-semibold text-fs-xs-title mb-8">Settings</p>
-      <div class="flex gap-5 font-semibold text-fs-p text-gray-1200">
-        <button
-          (click)="onClickSetting('profile')"
-          class="pb-2 border-b-2 border-white"
-          [ngClass]="activeSetting === 'profile' ? 'active-setting' : ''"
-        >
-          Profile
-        </button>
-        <button
-          (click)="onClickSetting('change-password')"
-          class="pb-2 border-b-2 border-white"
-          [ngClass]="
-            activeSetting === 'change-password' ? 'active-setting' : ''
-          "
-        >
-          Change Password
-        </button>
-      </div>
-
-      <form
-        (ngSubmit)="settingsFormSubmit()"
-        [formGroup]="settingsForm"
-        *ngIf="activeSetting === 'profile'"
-        class="grid grid-cols-1 sm:grid-cols-2 mt-10 gap-10"
-      >
-        <div class="flex flex-col gap-3">
-          <label for="">User name</label>
-          <input class="setting-input" type="text" formControlName="userName" />
-          <div
-            *ngIf="
-              settingsForm.get('userName')?.invalid &&
-              !settingsForm.get('userName')?.value &&
-              (settingsForm.get('userName')?.touched || settingsForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">User name is required</p>
-          </div>
-        </div>
-        <div class="flex flex-col gap-3">
-          <label for="">Last name</label>
-          <input type="text" class="setting-input" formControlName="lastName" />
-          <div
-            *ngIf="
-              settingsForm.get('lastName')?.invalid &&
-              !settingsForm.get('lastName')?.value &&
-              (settingsForm.get('lastName')?.touched || settingsForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">Last name is required</p>
-          </div>
-        </div>
-        <div class="flex flex-col gap-3">
-          <label for="">Phone</label>
-          <input type="phone" class="setting-input" formControlName="phone" />
-          <div
-            *ngIf="
-              settingsForm.get('phone')?.invalid &&
-              !settingsForm.get('phone')?.value &&
-              (settingsForm.get('phone')?.touched || settingsForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">Phone is required</p>
-          </div>
-          <div
-            *ngIf="
-              settingsForm.get('phone')?.invalid &&
-              settingsForm.get('phone')?.value&&
-              settingsForm.get('phone')?.errors?.['numericOnly'] &&
-              (settingsForm.get('phone')?.touched || settingsForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">Please Enter Numbers</p>
-          </div>
-        </div>
-        <div class="flex flex-col gap-3">
-          <label for="">Email</label>
-          <input type="email" class="setting-input" formControlName="email" />
-          <div
-            *ngIf="
-              settingsForm.get('email')?.invalid &&
-              !settingsForm.get('email')?.value &&
-              (settingsForm.get('email')?.touched || settingsForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">Email is required</p>
-          </div>
-          <div
-            *ngIf="
-            settingsForm.get('email')?.invalid &&
-            settingsForm.get('email')?.errors?.['email'] &&
-            (settingsForm.get('email')?.touched || settingsForm.dirty)
-          "
-          >
-            <p class="text-red-500 text-sm">
-              Please Enter an Email With &commat;
-            </p>
-          </div>
-        </div>
-        <button
-          class="w-[174px] h-[56px] bg-primary-500 font-medium text-white rounded-md"
-        >
-          Update Profile
-        </button>
-      </form>
-
-      <form
-        (ngSubmit)="changePasswordFormSubmit()"
-        [formGroup]="changePasswordForm"
-        *ngIf="activeSetting === 'change-password'"
-        class="grid grid-cols-1 sm:grid-cols-2 mt-10 gap-10"
-      >
-        <div class="flex flex-col gap-3">
-          <label for="">Current Password</label>
-          <input
-            type="password"
-            class="setting-input"
-            placeholder="Type Here"
-            formControlName="currentPassword"
-          />
-          <div
-            *ngIf="
-              changePasswordForm.get('currentPassword')?.invalid &&
-              !changePasswordForm.get('currentPassword')?.value &&
-              (changePasswordForm.get('currentPassword')?.touched ||
-                changePasswordForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">Current Password is required</p>
-          </div>
-          <div
-            *ngIf="
-            changePasswordForm.get('currentPassword')?.invalid &&
-            changePasswordForm.get('currentPassword')?.errors?.['minlength'] &&
-            (changePasswordForm.get('currentPassword')?.touched || changePasswordForm.dirty)
-          "
-          >
-            <p class="text-red-500 text-sm">Minimum Length 3 Characters</p>
-          </div>
-          <div
-            *ngIf="
-          changePasswordForm.get('currentPassword')?.invalid &&
-          changePasswordForm.get('currentPassword')?.errors?.['maxlength'] &&
-            (changePasswordForm.get('currentPassword')?.touched || changePasswordForm.dirty)
-          "
-          >
-            <p class="text-red-500 text-sm">Maxmimum Length 16 Characters</p>
-          </div>
-        </div>
-        <div class="flex flex-col gap-3">
-          <label for="">New Password</label>
-          <input
-            type="password"
-            class="setting-input"
-            placeholder="Type Here"
-            formControlName="newPassword"
-          />
-          <div
-            *ngIf="
-              changePasswordForm.get('newPassword')?.invalid &&
-              !changePasswordForm.get('newPassword')?.value &&
-              (changePasswordForm.get('newPassword')?.touched ||
-                changePasswordForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">New Password is required</p>
-          </div>
-          <div
-            *ngIf="
-          changePasswordForm.get('newPassword')?.invalid &&
-          changePasswordForm.get('newPassword')?.errors?.['maxlength'] &&
-            (changePasswordForm.get('newPassword')?.touched || changePasswordForm.dirty)
-          "
-          >
-            <p class="text-red-500 text-sm">Maxmimum Length 16 Characters</p>
-          </div>
-        </div>
-        <button
-          class="w-[174px] h-[56px] bg-primary-500 font-medium text-white rounded-md"
-        >
-          Update Password
-        </button>
-      </form>
-    </div>
-
-    <!-- Change Password -->
-    <div *ngIf="acitveDiv === 'change-password'">
-      <p class="font-semibold text-fs-xs-title mb-8">Change Password</p>
-      <form
-        (ngSubmit)="changePasswordFormSubmit()"
-        [formGroup]="changePasswordForm"
-        class="grid grid-cols-1 sm:grid-cols-2 mt-10 gap-10"
-      >
-        <div class="flex flex-col gap-3">
-          <label for="">Current Password</label>
-          <input
-            type="password"
-            class="setting-input"
-            placeholder="Type Here"
-            formControlName="currentPassword"
-          />
-          <div
-            *ngIf="
-              changePasswordForm.get('currentPassword')?.invalid &&
-              !changePasswordForm.get('currentPassword')?.value &&
-              (changePasswordForm.get('currentPassword')?.touched ||
-                changePasswordForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">Current Password is required</p>
-          </div>
-          <div
-            *ngIf="
-            changePasswordForm.get('currentPassword')?.invalid &&
-            changePasswordForm.get('currentPassword')?.errors?.['minlength'] &&
-            (changePasswordForm.get('currentPassword')?.touched || changePasswordForm.dirty)
-          "
-          >
-            <p class="text-red-500 text-sm">Minimum Length 3 Characters</p>
-          </div>
-          <div
-            *ngIf="
-          changePasswordForm.get('currentPassword')?.invalid &&
-          changePasswordForm.get('currentPassword')?.errors?.['maxlength'] &&
-            (changePasswordForm.get('currentPassword')?.touched || changePasswordForm.dirty)
-          "
-          >
-            <p class="text-red-500 text-sm">Maxmimum Length 16 Characters</p>
-          </div>
-        </div>
-        <div class="flex flex-col gap-3">
-          <label for="">New Password</label>
-          <input
-            type="password"
-            class="setting-input"
-            placeholder="Type Here"
-            formControlName="newPassword"
-          />
-          <div
-            *ngIf="
-              changePasswordForm.get('newPassword')?.invalid &&
-              !changePasswordForm.get('newPassword')?.value &&
-              (changePasswordForm.get('newPassword')?.touched ||
-                changePasswordForm.dirty)
-            "
-          >
-            <p class="text-red-500 text-sm">New Password is required</p>
-          </div>
-          <div
-            *ngIf="
-          changePasswordForm.get('newPassword')?.invalid &&
-          changePasswordForm.get('newPassword')?.errors?.['maxlength'] &&
-            (changePasswordForm.get('newPassword')?.touched || changePasswordForm.dirty)
-          "
-          >
-            <p class="text-red-500 text-sm">Maxmimum Length 16 Characters</p>
-          </div>
-        </div>
-        <button
-          class="w-[174px] h-[56px] bg-primary-500 font-medium text-white rounded-md"
-        >
-          Update Password
-        </button>
-      </form>
-    </div>
+  <div class="w-[80%]" #targetElement>
+    <router-outlet></router-outlet>
   </div>
 </div>
