--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -57,7 +57,10 @@
       >My Account</a
     >
   </div>
-  <div class="hidden sm:flex flex-col items-center sm:flex-row gap-2 sm:gap-3">
+  <div
+    *ngIf="isEmpty()"
+    class="hidden sm:flex flex-col items-center sm:flex-row gap-2 sm:gap-3"
+  >
     <a
       routerLink="/login"
       class="border border-gray-1400 px-5 py-2 rounded-md font-medium hover:bg-primary-500 hover:text-white transition-colors delay-150 text-center sm:text-left"
@@ -69,6 +72,60 @@
       >Register Now</a
     >
   </div>
+  <!-- class="w-[241px] h-[382px]" -->
+  <div
+    (click)="toggleUserSettings()"
+    *ngIf="!isEmpty()"
+    class="font-semibold text-gray-1600 flex items-center gap-3 cursor-pointer relative"
+  >
+    <p
+      class="text-fs-xs-title bg-gray-500 rounded-full p-6 w-[24px] h-[24px] flex justify-center items-center"
+    >
+      {{ firstName }}{{ lastName }}
+    </p>
+    <p class="text-fs-p">{{ currentUser?.username }}</p>
+    <svg
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M12 13.06L16.933 8.12001L18.3509 9.52001L12 15.88L5.64908 9.52001L7.06705 8.12001L12 13.06Z"
+        fill="#24221E"
+      />
+    </svg>
+  </div>
+
+  <div
+    *ngIf="true"
+    class="font-medium text-gray-1600 w-[241px] h-[320px] absolute bg-white right-[51px] top-[91px] z-30 shadow-lg flex flex-col gap-5 justify-around"
+  >
+    <a
+      (click)="scrollToSecitions()"
+      routerLink="/my-account"
+      class="mx-5 pb-5 border-b-2 cursor-pointer"
+      >My Account</a
+    >
+    <a
+      routerLink="/my-account/payments-history"
+      class="mx-5 pb-5 border-b-2 cursor-pointer"
+      >Payment History</a
+    >
+    <a
+      routerLink="/my-account/settings"
+      class="mx-5 pb-5 border-b-2 cursor-pointer"
+      >Settings</a
+    >
+    <a
+      routerLink="/my-account/change-password"
+      class="mx-5 pb-5 border-b-2 cursor-pointer"
+      >Change Password</a
+    >
+    <a class="mx-5 pb-5 cursor-pointer">Logout</a>
+  </div>
+
   <!-- Navbar For Small Devices -->
   <div
     *ngIf="showNavbar"
