--- a/src/app/account/my-account/my-account.component.html
+++ b/src/app/account/my-account/my-account.component.html
@@ -384,7 +384,7 @@
   </div>
 </div>
 
-<div class="p-5 sm:p-20 flex flex-col sm:flex-row gap-20">
+<div class="p-5 sm:p-20 flex flex-col sm:flex-row gap-20" id="targetElement">
   <div
     class="flex flex-row sm:flex-col w-[100px] sm:w-[293px] sm:h-[718px] sm:border sm:border-[#DEE0E3] bg-gray-200 font-medium"
   >
@@ -418,7 +418,7 @@
     >
   </div>
 
-  <div class="w-[80%]" #targetElement>
+  <div class="w-[80%]">
     <router-outlet></router-outlet>
   </div>
 </div>
